Pull request #293: TND-4493: fix display of the mechanics block
Squashed commit of the following:

commit 31994899b98f0427a9e46a70c924ff720b49f055
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Wed Sep 1 15:15:37 2021 +0300

    TND-4493: fix display of the mechanics block

--- a/src/containers/ClientAppPage/ClientAppForm/FormConstructor/FormConstructor.module.css
+++ b/src/containers/ClientAppPage/ClientAppForm/FormConstructor/FormConstructor.module.css
@@ -1,6 +1,7 @@
 /* colFlex */
 .colFlex :global(.ant-checkbox-group) {
     display: flex;
+    flex-wrap: wrap;
 }
 /* /colFlex */
 
